--- a/style.css
+++ b/style.css
@@ -142,8 +142,9 @@ body {
 [ 2.1 Logo ]
 ---------------------*/
 .logo {
-  max-width: 109px;
-  padding-top: 20px;
+  max-width: 250px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   float: left;
 }
 /*-------------------
