Add pictures and update the special pies

--- a/www/style.css
+++ b/www/style.css
@@ -436,8 +436,8 @@ html,body{height:100%;}
 }
 
 .cream {
-  background: #5e482d;
-  border: 3px solid #5e482d;
+  background: #5e3727;
+  border: 3px solid #5e3727;
 }
 
 .special {
